Ingress/IngressF5-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-f5-2
  annotations:
      virtual-server.f5.com/ip: "10.30.2.59"
      virtual-server.f5.com/partition: "K8s"
      virtual-server.f5.com/balance: "round-robin"
      virtual-server.f5.com/https-port: "443"
      virtual-server.f5.com/health: |
        [
          {
            "path":     "/",
            "send":     "HTTP GET /",
            "interval": 5,
            "timeout":  10
          }
        ]
      virtual-server.f5.com/clientssl: '[{"bigIpProfile": "/Common/clientssl"}]'
      ingress.kubernetes.io/allow-http: "false"
      ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: f5-2
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: foo-service
            port:
              number: 80
        pathType: Prefix
